--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 
+    <link rel="icon" type="image/x-icon" href="/img/PUPLogo.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>PUP Map</title>
 </head>
 <body>
     <header>
@@ -22,41 +24,41 @@
     </div>
 
     <map name="mapPUP">
-        <area shape="circle" coords="638,771,97" title="Chapel" href="" id="chapel">
+        <area shape="circle"  coords="283,338,40" title="Chapel" href="" id="chapel">
 
-        <area shape="circle" coords="684,572,18" title="FlagPole" href="" id="flagPole">
+        <area shape="circle" coords="301,252,7" title="FlagPole" href="" id="flagPole">
 
-        <area shape="circle" coords="739,431,31" title="Obelisk" href="" id="obelisk">
+        <area shape="circle" coords="323,187,15" title="Obelisk" href="" id="obelisk">
 
-        <area shape="rect" coords="693,123,831,194" title="Pool" href="" id="pool">
+        <area shape="rect"  coords="304,55,366,85" title="Pool" href="" id="pool">
 
-        <area shape="rect" coords="181,332,304,460" title="CharlieBldg" href="" id="charliebldg">
+        <area shape="rect" coords="79,145,134,203" title="CharlieBldg" href="" id="charliebldg">
 
-        <area shape="rect" coords="796,271,869,336" title="court" href="" id="court">
+        <area shape="rect" coords="349,118,383,148" title="court" href="" id="court">
 
-        <area shape="rect" coords="927,272,1023,336" title="tennis" href="" id="tennis">
+        <area shape="rect" coords="398,111,458,160" title="tennis" href="" id="tennis">
 
-        <area shape="poly" coords="837,721,963,546,985,533,1090,545,1127,598,1132,654,1014,836,958,863,940,865,872,843,835,788,841,712" title="Oval" href="" id="oval">
+        <area shape="poly" coords="368,317,421,241,439,232,455,231,491,251,498,280,441,371,419,381,403,378,372,355,365,326,367,321" title="Oval" href="" id="oval">
 
-        <area shape="poly" coords="683,468,726,490,786,472,754,528,734,564,652,517,682,473" title="FreedomPark" href="" id="freedomPark">
+        <area shape="poly" coords="300,207,323,215,345,207,325,250,288,226,300,207" title="FreedomPark" href="" id="freedomPark">
 
-        <area shape="poly" coords="445,497,535,497,585,486,588,474,603,467,604,438,593,419,576,390,566,302,547,293,530,311,531,380,529,389,512,410,494,459,470,490,446,497" title="Lagoon" href="" id="lagoon">
+        <area shape="poly" coords="193,218,217,201,222,186,233,170,232,133,239,127,249,130,251,157,264,185,265,201,258,212,194,218" title="Lagoon" href="" id="lagoon">
 
-        <area shape="poly" coords="456,507,538,522,522,551,500,560,476,556,463,542,455,528,449,507" title="Amphitheater" href="" id="amphitheater">
+        <area shape="poly" coords="236,229,197,222,203,237,212,244,228,242,235,229" title="Amphitheater" href="" id="amphitheater">
 
-        <area shape="poly" coords="180,629,147,588,139,450,111,357,58,147,-1,58,3,974,239,973" title="PasigRiver" href="" id="pasigRiver">
+        <area shape="poly" coords="91,317,105,427,90,360,95,344,80,300,78,276,64,259,60,195,47,157,31,111,25,67,-1,26,1,428,104,427" title="PasigRiver" href="" id="pasigRiver">
 
-        <area shape="rect" coords="861,108,1066,213" title="Gymnasium" href="" id="gymnasium">
+        <area shape="rect" coords="378,46,470,94" title="Gymnasium" href="" id="gymnasium">
 
-        <area shape="rect" coords="883,548,831,672" alt="Grand Stand" href="" id="grandstand">
+        <area shape="rect" coords="388,239,366,295" alt="Grand Stand" href="" id="grandstand">
 
-        <area shape="poly" coords="398,236,407,272,427,268,457,386,510,370,483,261,579,229,566,180,470,203,442,99,388,113,419,227,398,235" title=" Ninoy Aquino Library and Learning Resources Center" href="" id="nallrc">
+        <area shape="poly" coords="174,103,183,100,170,47,194,41,206,88,249,77,255,100,213,114,224,161,201,168,187,117,179,118,174,103" title=" Ninoy Aquino Library and Learning Resources Center" href="" id="nallrc">
 
-        <area shape="poly" coords="262,835,286,830,191,552,158,427,122,270,109,176,83,135,143,422,176,545,210,665,255,819,260,832" title="Linear Park" href="" id="linearPark">
+        <area shape="poly" coords="114,366,59,179,35,59,40,59,67,184,97,274,119,364,114,366" title="Linear Park" href="" id="linearPark">
 
-        <area shape="rect" coords="1165,414,1194,454" title="Main Gate" href="" id="maingate">
+        <area shape="rect" coords="509,180,528,197" title="Main Gate" href="" id="maingate">
 
-        <area shape="poly" coords="1142,399,1200,396,1195,335,1173,338,1145,369,1143,394" title="PUP Pylon" href="" id="pylon">
+        <area shape="poly" coords="502,174,525,177,524,145,516,145,514,149,501,162,502,174" title="PUP Pylon" href="" id="pylon">
     </map>
 
      <div id="tooltip" class="tooltip" style="display: none;">
